name:                servant-sample
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ynishi/servant-sample#readme
license:             BSD3
license-file:        LICENSE
author:              Yutaka Nishimura
maintainer:          ytk.nishimura@gmail.com
copyright:           2018 Yutaka Nishimura
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Todo
                     , Usecase
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , text
                     , stm
  default-language:    Haskell2010

executable servant-sample-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-sample
  default-language:    Haskell2010

test-suite servant-sample-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-sample
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ynishi/servant-sample
